fixes and wrap up of the entire home page

--- a/src/components/rightbar/rightbar.css
+++ b/src/components/rightbar/rightbar.css
@@ -1,5 +1,24 @@
 .rightbar {
   flex: 3.5;
+  height: calc(100vh - 50px);
+  overflow: scroll;
+  position: sticky;
+  top: 50px;
+  /* z-index: -2; */
+}
+
+
+::-webkit-scrollbar {
+  width: 4px;
+  border-radius: 50%;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(179, 179, 179);
 }
 
 .rightbarWrapper {
@@ -20,4 +39,54 @@
 .birthdayText {
   font-weight: 300;
   font-size: 15px;
+}
+
+.rightbarAd {
+  width: 100%;
+  border-radius: 10px;
+  margin: 30px 0;
+}
+
+.rightbarTitle {
+  margin-bottom: 20px;
+}
+
+.rightbarFriendList {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.rightbarFriend {
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.rightbarProfileImgContainer {
+  margin-right: 10px;
+  position: relative;
+  z-index: -2;
+}
+
+.rightbarProfileImg {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.rightbarOnline {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  background-color: limegreen;
+  position: absolute;
+  top: -2px;
+  right: 0;
+  border: 2px solid white
+}
+
+.rightbarUsername {
+  font-weight: 500;
 }
